--- a/test/unit_tests/Makefile
+++ b/test/unit_tests/Makefile
@@ -1,4 +1,3 @@
-#SUBDIRS = airfoil
 SUBDIRS := ${shell find ./* -maxdepth 0 -type d -print }
 SUBCLEAN = $(addsuffix .clean,$(SUBDIRS))
 .PHONY: subdirs $(SUBDIRS) clean $(SUBCLEAN)
@@ -6,9 +5,11 @@ subdirs: $(SUBDIRS)
 
 clean: $(SUBCLEAN)
 
-test:
-	@echo $(SUBCLEAN)
+list_targets:
+	@echo $(SUBDIRS)
+
 $(SUBDIRS):
-	@$(MAKE) -C $@ --no-print-directory
+	@$(MAKE) -C $@ #--no-print-directory
+
 $(SUBCLEAN): %.clean:
 	@$(MAKE) -C $* clean --no-print-directory
