--- a/test/shu_osher_shock_problem/Makefile
+++ b/test/shu_osher_shock_problem/Makefile
@@ -1,29 +1,14 @@
-FC=gfortran
-
 HOMEDIR=../../
 
-CODE_OBJ=$(HOMEDIR)obj/
-TOOLS_OBJ=$(HOMEDIR)tools/obj/
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm
+include $(HOMEDIR)Makefile.global
 
-INCLUDE = -I/usr/include/ -I$(TOOLS_OBJ) -I$(CODE_OBJ)
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
+INCLUDE += -I$(TOOLS_OBJ) -I$(CODE_OBJ)
 
-PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
-CREATE_XDMF=$(HOMEDIR)tools/bin/create_xdmf
-EXTRACT_1D=$(HOMEDIR)tools/bin/extract_1D
-PROGRAM=$(HOMEDIR)bin/AMBS
-
-.PHONY: all cmp run clean cp grid_inf show
+.PHONY: all run clean grid_rot show
+.DEFAULT_GOAL := all
 
 	
-all: cmp run #show
-
-cmp:
-	@$(MAKE) -C $(HOMEDIR) --no-print-directory
+all: compile_global run #show
 
 run: data_in.h5 config.bin
 	@echo ' Running Shu Osher Shock Problem'
@@ -97,8 +82,3 @@ grid_rot: cmp gridgen
 clean:
 	@rm -vf *.o *.mod *.dat *.plt *.png *.vtk *.txt *.bin gridgen *.dx stubex *.csv *.h5 *.xdmf
 	@rm -vrf *~
-
-##### CLEAN PROJECT
-cp: 
-	@echo "CLEANING SOLVER DIR"
-	@make -C $(HOMEDIR) clean --no-print-directory
