--- a/test/sod_shock_tube/Makefile
+++ b/test/sod_shock_tube/Makefile
@@ -1,4 +1,3 @@
-#SUBDIRS = i-Direction
 SUBDIRS := ${shell find ./*  -maxdepth 0 -type d -print }
 SUBCLEAN = $(addsuffix .clean,$(SUBDIRS))
 CALC_ERROR=calc_error
@@ -9,8 +8,8 @@ subdirs: $(SUBDIRS)
 clean:  $(SUBCLEAN) 
 	@rm -vf *.o *.mod *.ufo *.dat *.plt *.png *.vtk *.txt *.bin gridgen *.silo *.dx stubex $(CALC_ERROR)
 
-test:
-	@echo $(SUBCLEAN)
+list_targets:
+	@echo $(SUBDIRS)
 
 $(CALC_ERROR):$(CALC_ERROR).F90
 	@gfortran $< -o $@
