--- a/test/sod_shock_tube/diagonal/Makefile
+++ b/test/sod_shock_tube/diagonal/Makefile
@@ -1,28 +1,16 @@
-FC=gfortran
-
 HOMEDIR=../../../
 
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm
+include $(HOMEDIR)Makefile.global
 
-INCLUDE = -I/usr/include/ -I$(HOMEDIR)tools/obj/ -I$(HOMEDIR)obj/
+INCLUDE += -I$(TOOLS_OBJ) -I$(CODE_OBJ)
 
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
+CALC_ERROR=../calc_error &>> errors.txt
 
-PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
-CREATE_XDMF=$(HOMEDIR)tools/bin/create_xdmf
-EXTRACT_1D=$(HOMEDIR)tools/bin/extract_1D
-PROGRAM=$(HOMEDIR)bin/AMBS
-
-.PHONY: all cmp run clean cp grid_inf show
+.PHONY: all run clean grid_inf show
+.DEFAULT_GOAL := all
 
 	
-all: cmp run #show
-
-cmp:
-	@$(MAKE) -C $(HOMEDIR) --no-print-directory
+all: compile_global run #show
 
 str.dx: ../stubex
 	@./$<
@@ -35,6 +23,7 @@ run: data_in.h5 str.dx config.bin
 	@$(PROGRAM) #-debug
 	@$(EXTRACT_1D)
 	@$(CREATE_XDMF)
+
 show:
 	@gnuplot -p plot.gnuplot
 
@@ -43,12 +32,11 @@ data_in.h5: gridgen
 
 config.bin: config.cfg	
 	@$(PRE_CONFIG)
+
 gridgen: gridgen.F90 $(HOMEDIR)tools/obj/module_gridgen.o
 	$(FC) $(CFLAGS) $^ -o $@ $(LIBS) $(INCLUDE)
-	
 
-
-sens: cmp gridgen str.dx
+sens: compile_global gridgen str.dx
 	./gridgen 101
 	@$(PRE_CONFIG) disc/space_order=1
 	@$(PROGRAM)
@@ -77,15 +65,8 @@ sens: cmp gridgen str.dx
 	@$(EXTRACT_1D)
 	@mv data_1d.csv data_ni_500_sp_2.csv
 	@gnuplot -p plot_sens.gnuplot
-        
 
-
-
-
-
-
-
-grid_rot: cmp gridgen
+grid_rot: compile_global gridgen
 	./gridgen 101 0.0
 	$(MAKE) run
 	cp data_1d.csv data_1d_00.csv
@@ -100,8 +81,3 @@ grid_rot: cmp gridgen
 clean:
 	@rm -vf git_out.bin *.o *.mod *.ufo *.dat *.plt *.png *.vtk *.txt *.bin gridgen *.silo *.dx stubex *.h5 *.csv *.xdmf
 	@rm -vrf *~
-
-##### CLEAN PROJECT
-cp: 
-	@echo "CLEANING SOLVER DIR"
-	@make -C $(HOMEDIR) clean --no-print-directory
