--- a/test/sod_shock_tube/k-Direction/Makefile
+++ b/test/sod_shock_tube/k-Direction/Makefile
@@ -1,30 +1,15 @@
-FC=gfortran
-
 HOMEDIR=../../../
 
-CODE_OBJ=$(HOMEDIR)obj/
-TOOLS_OBJ=$(HOMEDIR)tools/obj/
-LIBS = -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lhdf5_fortran -lm
+include $(HOMEDIR)Makefile.global
 
-INCLUDE = -I/usr/include/ -I$(TOOLS_OBJ) -I$(CODE_OBJ)
-CFLAGS = -std=f2008
-CFLAGS += -Wconversion -Wall -Wextra -Warray-temporaries -Werror
-#CFLAGS += -DDEBUG #Unnecessary comments are oppressed
-CFLAGS += -O3
+INCLUDE += -I$(TOOLS_OBJ) -I$(CODE_OBJ)
 
-PRE_CONFIG=$(HOMEDIR)tools/bin/pre_config
-CREATE_XDMF=$(HOMEDIR)tools/bin/create_xdmf
-EXTRACT_1D=$(HOMEDIR)tools/bin/extract_1D
 CALC_ERROR=../calc_error &>> errors.txt
-PROGRAM=$(HOMEDIR)bin/AMBS
 
 .PHONY: all cmp run clean cp grid_inf show
+.DEFAULT_GOAL := all
 
-	
-all: cmp run #show
-
-cmp:
-	@$(MAKE) -C $(HOMEDIR) --no-print-directory
+all: compile_global run #show
 
 str.dx: ../stubex
 	@./$<
@@ -92,13 +77,6 @@ sens: cmp gridgen str.dx
 	@mv error.csv error_ni_500_sp_2.csv
 	@gnuplot -p plot_sens.gnuplot
         
-
-
-
-
-
-
-
 grid_rot: cmp gridgen
 	./gridgen 101 0.0
 	$(MAKE) run
@@ -114,8 +92,3 @@ grid_rot: cmp gridgen
 clean:
 	@rm -vf *.o *.mod *.dat *.plt *.png *.vtk *.txt *.bin gridgen *.dx stubex *.csv *.h5 *.xdmf fort.*
 	@rm -vrf *~
-
-##### CLEAN PROJECT
-cp: 
-	@echo "CLEANING SOLVER DIR"
-	@make -C $(HOMEDIR) clean --no-print-directory
