SOD Shock Tube test updated

--- a/test/flate_plate/config.cfg
+++ b/test/flate_plate/config.cfg
@@ -11,9 +11,9 @@
 !!                     RUNTIME AND OUTPUT CONTROL                             !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
-iterations           = 1000000  !Number of Iterations
-sol_out_screen_int   = 10000
-res_out_screen_int   = 1000
+iterations           = 1000  !Number of Iterations
+sol_out_screen_int   = 10
+res_out_screen_int   = 100
 res_nr_out           = 1,4
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
