--- a/test/flate_plate/1block/Makefile
+++ b/test/flate_plate/1block/Makefile
@@ -14,10 +14,12 @@ compile: compile_global flate_plate_extract
 run: data_in.h5 config.bin
 	@$(PROGRAM) #-debug
 	@$(CREATE_XDMF)
+
 post: compile
 	@./flate_plate_extract
+
 show:
-	@gnuplot -p plot.gnuplot
+	@gnuplot -p plot_profiles.gnuplot
 
 data_in.h5: gridgen
 	@./$<
@@ -25,7 +27,7 @@ data_in.h5: gridgen
 config.bin: config.cfg	
 	@$(PRE_CONFIG)
 
-gridgen: gridgen.F90 $(TOOLS_OBJ)/module_gridgen.o
+gridgen: gridgen.F90 $(TOOLS_OBJ)/module_gridgen.o $(CODE_OBJ)const_mod.o
 	$(FC) $(CFLAGS) $^ -o $@ $(LIBS) $(INCLUDE)
 
 flate_plate_extract: flate_plate_extract.F90 $(TOOLS_OBJ)module_post.o $(CODE_OBJ)const_mod.o $(CODE_OBJ)file_io_mod.o $(CODE_OBJ)screen_io_mod.o $(CODE_OBJ)data_mod.o $(CODE_OBJ)control_mod.o
