--- a/Makefile.global
+++ b/Makefile.global
@@ -1,6 +1,6 @@
 FC=gfortran
 INCLUDE = -I/media/LDS/module/software/libs/hdf5/1.8.17_gnu/include/static/
-INCLUDE = -I/usr/include/
+#INCLUDE = -I/usr/include/
 
 LIBS = -lhdf5 -lhdf5hl_fortran -lhdf5_hl -lhdf5_fortran -lm
 
