Added vanLeer limiter

--- a/test/sod_shock_tube/i-Direction/config.cfg
+++ b/test/sod_shock_tube/i-Direction/config.cfg
@@ -1,10 +1,10 @@
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-!!                                                                                                                              !! 
-!!                                                                                                                              !! 
-!!                               CONFIG FILE FOR AMBS                                                                           !! 
-!!                                                                                                                              !! 
-!!                                                                                                                              !! 
-!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!                                                                                                               !!
+!!                                                                                                               !!
+!!                               CONFIG FILE FOR AMBS                                                            !!
+!!                                                                                                               !!
+!!                                                                                                               !!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -26,7 +26,8 @@ c_les_sgs           = 0.5
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!                         DISCRETIZATION CONTROL                             !!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-space_order         = 1
+space_order         = 2
+limiter             = 2
 riemann_solver      = 1 !solver are 1:Roe ; 2:Lax-Friedrich ; 3:AUSM ; 4: AUSM+up
 timestep_method     = 1 ! 1: timestep from config [makes only sence for instat]
                         ! 2: minimal timestep of all cells ( Calculated with CFL number)
