Ignoring solution and executables ( not need to make clean before commit)

--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,21 @@
 # solutions
 *.h5
 *.xdmf
+*.bin
+*.csv
+fort.*
+*.dat
+*.dx
+errors.txt
+
 
 # Executables
 *.exe
 *.out
 *.app
+calc_error
+gridgen
+stubex
 
 # Folders
 /GT_version/
